--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -11,3 +11,6 @@ NeedsCompilation: no
 Packaged: 2023-08-25 23:54:43 UTC; parastlm
 Repository: CRAN
 Date/Publication: 2023-08-26 14:10:04 UTC
+Suggests: 
+    testthat (>= 3.0.0)
+Config/testthat/edition: 3
