pkgdown and readme

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -15,3 +15,11 @@ export(get_model)
 export(landpred)
 export(mse.BW)
 export(var.fun)
+importFrom(stats,bw.nrd)
+importFrom(stats,dnorm)
+importFrom(stats,glm)
+importFrom(stats,glm.fit)
+importFrom(stats,optimize)
+importFrom(survival,Surv)
+importFrom(survival,coxph)
+importFrom(survival,survfit)
