--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -15,3 +15,5 @@ Suggests:
     testthat (>= 3.0.0)
 Config/testthat/edition: 3
 RoxygenNote: 7.3.3
+URL: https://baolong281.github.io/landpred/
+Encoding: UTF-8
