--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -6,7 +6,7 @@ Author: Layla Parast
 Maintainer: Layla Parast <parast@austin.utexas.edu>
 Description: Provides functions for landmark prediction of a survival outcome incorporating covariate and short-term event information. For more information about landmark prediction please see: Parast, Layla, Su-Chun Cheng, and Tianxi Cai. Incorporating short-term outcome information to predict long-term survival with discrete markers. Biometrical Journal 53.2 (2011): 294-307, <doi:10.1002/bimj.201000150>.
 License: GPL
-Imports: survival
+Imports: survival, splines, sm, quantreg
 NeedsCompilation: no
 Packaged: 2023-08-25 23:54:43 UTC; parastlm
 Repository: CRAN
