--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,18 +3,16 @@
 S3method(coef,landpred_model_continuous)
 S3method(predict,landpred_model_continuous)
 S3method(predict,landpred_model_discrete)
+S3method(print,landpred_model_continuous)
 S3method(print,landpred_model_discrete)
 S3method(print,landpred_object)
 S3method(summary,landpred_model_continuous)
 S3method(summary,landpred_object)
-export(BS.landmark)
-export(coefficient_se)
-export(fit_glm_normal)
-export(fit_short_glm)
 export(get_model)
 export(landpred)
-export(mse.BW)
-export(var.fun)
+import(quantreg)
+import(sm)
+import(splines)
 importFrom(stats,bw.nrd)
 importFrom(stats,dnorm)
 importFrom(stats,glm)
