--- a/NAMESPACE
+++ b/NAMESPACE
@@ -8,8 +8,25 @@ S3method(print,landpred_model_discrete)
 S3method(print,landpred_object)
 S3method(summary,landpred_model_continuous)
 S3method(summary,landpred_object)
+export(AUC.landmark)
+export(BS.landmark)
+export(Ghat.FUN)
+export(Kern.FUN)
+export(Prob.Covariate)
+export(Prob.Covariate.ShortEvent)
+export(Prob.Null)
+export(Prob2)
+export(Prob2.k.t)
+export(VTM)
+export(Wi.FUN)
+export(cumsum2)
 export(get_model)
+export(helper.si)
 export(landpred)
+export(mse.BW)
+export(optimize.mse.BW)
+export(optimize_bandwidth)
+export(prob2.single)
 import(quantreg)
 import(sm)
 import(splines)
