--- a/NAMESPACE
+++ b/NAMESPACE
@@ -30,11 +30,23 @@ export(prob2.single)
 import(quantreg)
 import(sm)
 import(splines)
+importFrom(stats,as.formula)
 importFrom(stats,bw.nrd)
+importFrom(stats,coef)
 importFrom(stats,dnorm)
 importFrom(stats,glm)
 importFrom(stats,glm.fit)
+importFrom(stats,model.frame)
+importFrom(stats,model.response)
+importFrom(stats,nobs)
 importFrom(stats,optimize)
+importFrom(stats,predict)
+importFrom(stats,printCoefmat)
+importFrom(stats,rexp)
+importFrom(stats,sd)
+importFrom(stats,setNames)
+importFrom(stats,terms)
+importFrom(stats,vcov)
 importFrom(survival,Surv)
 importFrom(survival,coxph)
 importFrom(survival,survfit)
